feat: fix `category slugs`

--- a/crate/magical-rs/Cargo.toml
+++ b/crate/magical-rs/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.0.1"
 edition = "2024"
 license-file = "LICENSE"
 keywords = ["detect-file", "no-dependency", "foss", "magic"]
-categories = ["utils", "development", "files"]
+categories = ["filesystem"]
 include = ["LICENSE", "tests", "src/**/*.rs"]
 authors = ["Reim-developer", "contact.kaxtr@gmail.com"]
 readme = "readme.md"
