Fix: License in `Cargo` metadata

--- a/crate/magical-rs/Cargo.toml
+++ b/crate/magical-rs/Cargo.toml
@@ -3,6 +3,7 @@ name = "magical_rs"
 description = "This crate detects file types by matching magic bytes (signatures) at specific offsets."
 version = "0.0.1"
 edition = "2024"
+license = "GPL-3.0-or-later"
 license-file = "LICENSE"
 keywords = ["detect-file", "no-dependency", "foss", "magic"]
 categories = ["filesystem"]
