--- a/crate/magical-rs/Cargo.toml
+++ b/crate/magical-rs/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "magical_rs"
 description = "This crate detects file types by matching magic bytes (signatures) at specific offsets."
-version = "0.0.5"
+version = "0.0.6"
 edition = "2024"
 license = "GPL-3.0-or-later"
 keywords = ["detect-file", "no-dependency", "foss", "magic", "rlib"]
@@ -13,5 +13,10 @@ repository = "https://github.com/reim-developer/venus"
 
 [lib]
 crate-type = ["lib"]
+
+[features]
+default = ["std"]
+std = []
+no_std = []
 
 [dependencies]
