--- a/crate/magical-rs/Cargo.toml
+++ b/crate/magical-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "magical_rs"
-description = "This crate detects file types by matching magic bytes (signatures) at specific offsets."
+description = "Zero-dependency, no_std-friendly file type detection by magic bytes — accurate, fast, and extensible"
 version = "0.0.6"
 edition = "2024"
 license = "GPL-3.0-or-later"
