--- a/crate/magical-rs/Cargo.toml
+++ b/crate/magical-rs/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "magical_rs"
 description = "Zero-dependency, no_std-friendly file type detection by magic bytes — accurate, fast, and extensible"
-version = "0.0.6"
+version = "0.0.7"
 edition = "2024"
 license = "GPL-3.0-or-later"
 keywords = ["detect-file", "no-dependency", "foss", "magic", "rlib"]
@@ -15,8 +15,7 @@ repository = "https://github.com/reim-developer/venus"
 crate-type = ["lib"]
 
 [features]
-default = ["std"]
-std = []
+default = []
 no_std = []
 
 [dependencies]
