--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.3"
 edition = "2024"
 license = "GPL-3.0-or-later"
 keywords = ["detect file", "no dependency", "no_std", "magic", "rlib"]
-categories = ["filesystem", "No standard library"]
+categories = ["filesystem", "no-std"]
 include = ["LICENSE", "src/**/*.rs", "CHANGELOG.md"]
 authors = ["Reim-developer", "contact.kaxtr@gmail.com"]
 readme = "readme.md"
@@ -16,6 +16,11 @@ repository = "https://github.com/reim-developer/magical_rs"
 
 [lib]
 crate-type = ["lib"]
+
+[[example]]
+name = "Examples of magical_rs"
+path = "examples"
+test = false
 
 [features]
 default = ["std"]
