--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ Built for speed, safety, and extensibility. """
 version = "0.1.3"
 edition = "2024"
 license = "GPL-3.0-or-later"
-keywords = ["detect file", "no dependency", "no_std", "magic", "rlib"]
+keywords = ["detect_file", "no_dependency", "no_std", "magic", "rlib"]
 categories = ["filesystem", "no-std"]
 include = ["LICENSE", "src/**/*.rs", "CHANGELOG.md"]
 authors = ["Reim-developer", "contact.kaxtr@gmail.com"]
